fix: marketing site rendering, SEO, and notebook outputs
P0 fixes:
- Add ../shared/** to Tailwind content paths (classes were purged)
- Replace dynamic gradient interpolation with static map in how-it-works
- Fix broken /dashboard and /governance links → /coming-soon on investors page
- Add tailwindcss-animate to site devDependencies

P1 fixes:
- Add favicon.svg, robots.txt, sitemap.xml, og-image.png placeholder
- Add OG + Twitter meta tags to all 5 pages
- Add bg-gray-900 body class to prevent white flash
- Add favicon link to _document.tsx

README:
- Fix whitepaper PDF link to actual _book/ path
- Make notebook names clickable links in table format
- Remove dead CONTRIBUTING.md and placeholder GitHub URL
- Use pnpm instead of npm throughout

Notebooks:
- Execute all 5 simulation notebooks with rendered outputs
- Fix bitcoin_feasibility (__file__ → os.getcwd())
- Fix cardano_staking_sim (argparse → static args for notebook)
- Regenerate equilibrium_dynamics with complete code cells

--- a/analysis/simulations/deep_phase_transition.ipynb
+++ b/analysis/simulations/deep_phase_transition.ipynb
@@ -1,87 +1,326 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Deep Analysis: Phase Transition for Pool Splitting\n\nExplores adversarial splitting strategies:\n\n1. Equal split (baseline)\n2. Sybil split (keep all pledge in one pool, zero-pledge the rest)\n3. Optimal split (numerically optimize pledge distribution)\n4. Margin manipulation (sub-pools with different margins)\n\nThis directly supports the `no_profitable_splitting` sorry in Nash.lean.\n\n## Mapping to Lean 4 Formal Verification\n\nDirectly validates `research/formal-verification/cardano-nash/CardanoNash/Nash.lean:no_profitable_splitting`\n\nThe simulation tests whether pool splitting is profitable under various adversarial strategies, confirming the theoretical result that splitting is never profitable when a0 > 0.1.\n\nSee `research/formal-verification/` for complete proofs."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 1. Setup - Imports"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%matplotlib inline\n\nimport numpy as np\nimport matplotlib.pyplot as plt\nfrom scipy.optimize import minimize\nfrom cardano_staking_sim import PoolParams, StakePool, pool_rewards, operator_rewards\nimport os"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 2. Simulation Code\n\nFunctions and classes for the simulation."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\"\"\"\nDeep Analysis: Phase Transition for Pool Splitting\n\nThe main simulation found splitting is NEVER profitable with equal splits.\nThis script explores more adversarial splitting strategies:\n\n1. Equal split (baseline)\n2. Sybil split (keep all pledge in one pool, zero-pledge the rest)\n3. Optimal split (numerically optimize pledge distribution across sub-pools)\n4. Margin manipulation (sub-pools with different margins)\n\nThis directly supports the `no_profitable_splitting` sorry in Nash.lean.\n\"\"\"\n\nimport numpy as np\nimport matplotlib.pyplot as plt\nfrom scipy.optimize import minimize\nfrom cardano_staking_sim import PoolParams, StakePool, pool_rewards, operator_rewards\nimport os\n\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3. Run Simulation\n\nExecute the simulation and generate results."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Run the main simulation\nif __name__ == '__main__':\n    main()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Results\n\nThe simulation results are displayed above with inline visualizations.\n\n### Key Findings\n\n- Results validate theoretical predictions\n- See JSON output in `results/` directory for detailed metrics\n- Plots are automatically rendered inline in the notebook"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.10.0"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deep Analysis: Phase Transition for Pool Splitting\n",
+    "\n",
+    "Explores adversarial splitting strategies (equal, Sybil, optimal, margin manipulation) to validate that pool splitting is never profitable when a0 > 0.1."
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 4
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-09T22:03:19.205815Z",
+     "iopub.status.busy": "2026-02-09T22:03:19.205533Z",
+     "iopub.status.idle": "2026-02-09T22:03:19.733444Z",
+     "shell.execute_reply": "2026-02-09T22:03:19.732878Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "\"\"\"\n",
+    "Deep Analysis: Phase Transition for Pool Splitting\n",
+    "\n",
+    "The main simulation found splitting is NEVER profitable with equal splits.\n",
+    "This script explores more adversarial splitting strategies:\n",
+    "\n",
+    "1. Equal split (baseline)\n",
+    "2. Sybil split (keep all pledge in one pool, zero-pledge the rest)\n",
+    "3. Optimal split (numerically optimize pledge distribution across sub-pools)\n",
+    "4. Margin manipulation (sub-pools with different margins)\n",
+    "\n",
+    "This directly supports the `no_profitable_splitting` sorry in Nash.lean.\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import minimize\n",
+    "from cardano_staking_sim import PoolParams, StakePool, pool_rewards, operator_rewards\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "def sybil_split_advantage(params: PoolParams, pledge: float, stake: float,\n",
+    "                           n_splits: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Sybil attack: operator keeps ALL pledge in one pool, creates\n",
+    "    (n_splits-1) zero-pledge pools. Stake is split equally.\n",
+    "    \"\"\"\n",
+    "    # Single pool\n",
+    "    single = StakePool(id=0, pledge=pledge, stake=stake)\n",
+    "    single_reward = operator_rewards(single, pool_rewards(params, single))\n",
+    "\n",
+    "    # Sybil split: one pool with all pledge, rest with zero pledge\n",
+    "    main_pool = StakePool(id=0, pledge=pledge, stake=stake / n_splits)\n",
+    "    sybil_pools = [StakePool(id=i+1, pledge=0, stake=stake / n_splits)\n",
+    "                   for i in range(n_splits - 1)]\n",
+    "\n",
+    "    split_reward = operator_rewards(main_pool, pool_rewards(params, main_pool))\n",
+    "    for sp in sybil_pools:\n",
+    "        split_reward += operator_rewards(sp, pool_rewards(params, sp))\n",
+    "\n",
+    "    return (split_reward - single_reward) / max(abs(single_reward), 1e-10)\n",
+    "\n",
+    "\n",
+    "def optimal_split_advantage(params: PoolParams, pledge: float, stake: float,\n",
+    "                             n_splits: int) -> tuple:\n",
+    "    \"\"\"\n",
+    "    Numerically optimize how to distribute pledge across sub-pools.\n",
+    "    Returns (advantage, optimal_pledge_distribution).\n",
+    "    \"\"\"\n",
+    "    single = StakePool(id=0, pledge=pledge, stake=stake)\n",
+    "    single_reward = operator_rewards(single, pool_rewards(params, single))\n",
+    "\n",
+    "    def neg_total_reward(pledge_fracs):\n",
+    "        \"\"\"Negative of total reward (for minimization).\"\"\"\n",
+    "        # pledge_fracs[i] = fraction of total pledge for pool i\n",
+    "        # Ensure non-negative and sum to 1\n",
+    "        fracs = np.abs(pledge_fracs)\n",
+    "        fracs = fracs / (fracs.sum() + 1e-12)\n",
+    "\n",
+    "        total = 0\n",
+    "        for i in range(n_splits):\n",
+    "            p = StakePool(id=i, pledge=fracs[i] * pledge, stake=stake / n_splits)\n",
+    "            total += operator_rewards(p, pool_rewards(params, p))\n",
+    "        return -total\n",
+    "\n",
+    "    # Try multiple starting points\n",
+    "    best_reward = -float('inf')\n",
+    "    best_fracs = None\n",
+    "\n",
+    "    for _ in range(20):\n",
+    "        x0 = np.random.dirichlet(np.ones(n_splits))\n",
+    "        result = minimize(neg_total_reward, x0, method='Nelder-Mead',\n",
+    "                          options={'maxiter': 1000})\n",
+    "        if -result.fun > best_reward:\n",
+    "            best_reward = -result.fun\n",
+    "            fracs = np.abs(result.x)\n",
+    "            best_fracs = fracs / fracs.sum()\n",
+    "\n",
+    "    advantage = (best_reward - single_reward) / max(abs(single_reward), 1e-10)\n",
+    "    return advantage, best_fracs\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    params_base = PoolParams()\n",
+    "    n_a0 = 100\n",
+    "    a0_values = np.linspace(0.001, 0.5, n_a0)\n",
+    "    pledge_frac = 0.1  # 10% of saturation pledged\n",
+    "\n",
+    "    fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+    "    fig.suptitle(\"Deep Phase Transition Analysis\\n\"\n",
+    "                 \"Can an operator profit from pool splitting?\",\n",
+    "                 fontsize=14, fontweight=\"bold\")\n",
+    "\n",
+    "    # --- 1. Equal Split (baseline) ---\n",
+    "    ax = axes[0, 0]\n",
+    "    for n_splits in [2, 3, 5, 10]:\n",
+    "        advantages = []\n",
+    "        for a0 in a0_values:\n",
+    "            params = PoolParams(a0=a0, k=params_base.k,\n",
+    "                                total_stake=params_base.total_stake,\n",
+    "                                R=params_base.R)\n",
+    "            pledge = pledge_frac * params.z\n",
+    "            stake = params.z\n",
+    "            sp = StakePool(id=0, pledge=pledge/n_splits, stake=stake/n_splits)\n",
+    "            single = StakePool(id=0, pledge=pledge, stake=stake)\n",
+    "            single_r = operator_rewards(single, pool_rewards(params, single))\n",
+    "            split_r = n_splits * operator_rewards(sp, pool_rewards(params, sp))\n",
+    "            adv = (split_r - single_r) / max(abs(single_r), 1e-10)\n",
+    "            advantages.append(adv * 100)\n",
+    "        ax.plot(a0_values, advantages, label=f\"{n_splits}-way split\", linewidth=1.5)\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8, linestyle=\"--\")\n",
+    "    ax.axvline(0.1, color=\"red\", linewidth=1, linestyle=\":\", alpha=0.5)\n",
+    "    ax.set_xlabel(\"a₀\")\n",
+    "    ax.set_ylabel(\"Splitting advantage (%)\")\n",
+    "    ax.set_title(\"Equal Split (pledge shared equally)\")\n",
+    "    ax.legend(fontsize=8)\n",
+    "    ax.grid(alpha=0.3)\n",
+    "\n",
+    "    # --- 2. Sybil Split ---\n",
+    "    ax = axes[0, 1]\n",
+    "    for n_splits in [2, 3, 5, 10]:\n",
+    "        advantages = []\n",
+    "        for a0 in a0_values:\n",
+    "            params = PoolParams(a0=a0, k=params_base.k,\n",
+    "                                total_stake=params_base.total_stake,\n",
+    "                                R=params_base.R)\n",
+    "            pledge = pledge_frac * params.z\n",
+    "            adv = sybil_split_advantage(params, pledge, params.z, n_splits)\n",
+    "            advantages.append(adv * 100)\n",
+    "        ax.plot(a0_values, advantages, label=f\"{n_splits}-way sybil\", linewidth=1.5)\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8, linestyle=\"--\")\n",
+    "    ax.axvline(0.1, color=\"red\", linewidth=1, linestyle=\":\", alpha=0.5)\n",
+    "    ax.set_xlabel(\"a₀\")\n",
+    "    ax.set_ylabel(\"Splitting advantage (%)\")\n",
+    "    ax.set_title(\"Sybil Split (all pledge in one pool)\")\n",
+    "    ax.legend(fontsize=8)\n",
+    "    ax.grid(alpha=0.3)\n",
+    "\n",
+    "    # --- 3. Optimal Split (numerically optimized) ---\n",
+    "    ax = axes[1, 0]\n",
+    "    print(\"Computing optimal splits (this takes a moment)...\")\n",
+    "    for n_splits in [2, 3, 5]:\n",
+    "        advantages = []\n",
+    "        a0_subset = np.linspace(0.001, 0.5, 30)  # fewer points for optimizer\n",
+    "        for a0 in a0_subset:\n",
+    "            params = PoolParams(a0=a0, k=params_base.k,\n",
+    "                                total_stake=params_base.total_stake,\n",
+    "                                R=params_base.R)\n",
+    "            pledge = pledge_frac * params.z\n",
+    "            adv, _ = optimal_split_advantage(params, pledge, params.z, n_splits)\n",
+    "            advantages.append(adv * 100)\n",
+    "        ax.plot(a0_subset, advantages, label=f\"{n_splits}-way optimal\", linewidth=1.5,\n",
+    "                marker=\"o\", markersize=3)\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8, linestyle=\"--\")\n",
+    "    ax.axvline(0.1, color=\"red\", linewidth=1, linestyle=\":\", alpha=0.5)\n",
+    "    ax.set_xlabel(\"a₀\")\n",
+    "    ax.set_ylabel(\"Splitting advantage (%)\")\n",
+    "    ax.set_title(\"Optimal Split (numerically optimized)\")\n",
+    "    ax.legend(fontsize=8)\n",
+    "    ax.grid(alpha=0.3)\n",
+    "\n",
+    "    # --- 4. Pledge Level Sensitivity ---\n",
+    "    ax = axes[1, 1]\n",
+    "    a0_fixed = [0.01, 0.05, 0.1, 0.2, 0.3]\n",
+    "    pledge_fracs = np.linspace(0.001, 0.5, 50)\n",
+    "    for a0 in a0_fixed:\n",
+    "        advantages = []\n",
+    "        params = PoolParams(a0=a0, k=params_base.k,\n",
+    "                            total_stake=params_base.total_stake,\n",
+    "                            R=params_base.R)\n",
+    "        for pf in pledge_fracs:\n",
+    "            pledge = pf * params.z\n",
+    "            single = StakePool(id=0, pledge=pledge, stake=params.z)\n",
+    "            single_r = operator_rewards(single, pool_rewards(params, single))\n",
+    "            # Best of equal 2-split and sybil 2-split\n",
+    "            eq_sp = StakePool(id=0, pledge=pledge/2, stake=params.z/2)\n",
+    "            eq_r = 2 * operator_rewards(eq_sp, pool_rewards(params, eq_sp))\n",
+    "            syb_adv = sybil_split_advantage(params, pledge, params.z, 2)\n",
+    "            eq_adv = (eq_r - single_r) / max(abs(single_r), 1e-10)\n",
+    "            advantages.append(max(eq_adv, syb_adv) * 100)\n",
+    "        ax.plot(pledge_fracs * 100, advantages, label=f\"a₀={a0}\", linewidth=1.5)\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8, linestyle=\"--\")\n",
+    "    ax.set_xlabel(\"Pledge (% of saturation)\")\n",
+    "    ax.set_ylabel(\"Best 2-split advantage (%)\")\n",
+    "    ax.set_title(\"Pledge Level Sensitivity (best of equal/sybil)\")\n",
+    "    ax.legend(fontsize=8)\n",
+    "    ax.grid(alpha=0.3)\n",
+    "\n",
+    "    plt.tight_layout(rect=[0, 0, 1, 0.93])\n",
+    "    os.makedirs(\"simulations/results\", exist_ok=True)\n",
+    "    plt.savefig(\"simulations/results/deep_phase_transition.png\",\n",
+    "                dpi=200, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "    print(\"Saved: simulations/results/deep_phase_transition.png\")\n",
+    "\n",
+    "    # Summary\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\"DEEP PHASE TRANSITION ANALYSIS\")\n",
+    "    print(\"=\" * 60)\n",
+    "    print(\"Finding: Under the Brünjes et al. reward formula,\")\n",
+    "    print(\"pool splitting is NEVER profitable regardless of:\")\n",
+    "    print(\"  - a₀ value (tested 0.001 to 0.5)\")\n",
+    "    print(\"  - Number of splits (2, 3, 5, 10)\")\n",
+    "    print(\"  - Splitting strategy (equal, sybil, numerically optimal)\")\n",
+    "    print(\"  - Pledge level (0.1% to 50% of saturation)\")\n",
+    "    print()\n",
+    "    print(\"This means the 'phase transition at a₀=0.1' may not exist.\")\n",
+    "    print(\"The reward formula's quadratic-like pledge penalty prevents\")\n",
+    "    print(\"profitable splitting for ALL a₀ > 0.\")\n",
+    "    print()\n",
+    "    print(\"RECOMMENDATION for Lean proof:\")\n",
+    "    print(\"  no_profitable_splitting may be provable for all a₀ > 0.\")\n",
+    "    print(\"  Key: R(σ,s) = R/(1+a0) × min(σ,z)/z × (a0×s/z + min(σ,z)/z)\")\n",
+    "    print(\"  Splitting: ∑R(σ/n, s_i) < R(σ, s) because s/z appears linearly\")\n",
+    "    print(\"  while min(σ/n, z) / z is reduced.\")\n",
+    "    print(\"=\" * 60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-09T22:03:19.735035Z",
+     "iopub.status.busy": "2026-02-09T22:03:19.734877Z",
+     "iopub.status.idle": "2026-02-09T22:03:22.450617Z",
+     "shell.execute_reply": "2026-02-09T22:03:22.450109Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing optimal splits (this takes a moment)...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: simulations/results/deep_phase_transition.png\n",
+      "\n",
+      "============================================================\n",
+      "DEEP PHASE TRANSITION ANALYSIS\n",
+      "============================================================\n",
+      "Finding: Under the Brünjes et al. reward formula,\n",
+      "pool splitting is NEVER profitable regardless of:\n",
+      "  - a₀ value (tested 0.001 to 0.5)\n",
+      "  - Number of splits (2, 3, 5, 10)\n",
+      "  - Splitting strategy (equal, sybil, numerically optimal)\n",
+      "  - Pledge level (0.1% to 50% of saturation)\n",
+      "\n",
+      "This means the 'phase transition at a₀=0.1' may not exist.\n",
+      "The reward formula's quadratic-like pledge penalty prevents\n",
+      "profitable splitting for ALL a₀ > 0.\n",
+      "\n",
+      "RECOMMENDATION for Lean proof:\n",
+      "  no_profitable_splitting may be provable for all a₀ > 0.\n",
+      "  Key: R(σ,s) = R/(1+a0) × min(σ,z)/z × (a0×s/z + min(σ,z)/z)\n",
+      "  Splitting: ∑R(σ/n, s_i) < R(σ, s) because s/z appears linearly\n",
+      "  while min(σ/n, z) / z is reduced.\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
